// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformProduct original transform tests approval status scenarios should default PIM_CLASSIFICATION_CATALOGUE_NAMESPACE if not provided 1`] = `
[
  {
    "APPEARANCEATTRIBUTES$COLOURFAMILY": [
      {
        "code": "codesymbol",
        "name": "red symbol",
      },
    ],
    "APPEARANCEATTRIBUTES$TEXTUREFAMILY": [
      {
        "code": "codesymbol",
        "name": "glossy symbol",
      },
    ],
    "BMI_BRANDS": [
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "BRAND": [
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": [
      {
        "code": "parent-category-code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CLASSIFICATION-FEATURE-CODE": [
      {
        "code": "codesymbol",
        "name": "value symbol",
      },
    ],
    "GENERALINFORMATION$MATERIALS": [
      {
        "code": "codesymbol",
        "name": "concrete symbol",
      },
    ],
    "MEASUREMENTS$HEIGHT": [
      {
        "code": "codemm",
        "name": "30 mm",
      },
    ],
    "MEASUREMENTS$LENGTH": [
      {
        "code": "codemm",
        "name": "10 mm",
        "value": "10",
      },
    ],
    "MEASUREMENTS$THICKNESS": [
      {
        "code": "codemm",
        "name": "40 mm",
      },
    ],
    "MEASUREMENTS$WIDTH": [
      {
        "code": "codemm",
        "name": "20 mm",
        "value": "20",
      },
    ],
    "PARENT-CATEGORY-CODE": [
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "SCORINGWEIGHTATTRIBUTES$SCORINGWEIGHT": [
      {
        "code": "codesymbol",
        "name": "1.0 symbol",
      },
    ],
    "allCategories": [
      {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
      {
        "code": "BMI-brand-code",
        "parentCategoryCode": "parent-category-code",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": {
      "code": "base-code",
      "name": "name",
    },
    "battenSpacings": undefined,
    "brandCode": "BMI-brand-code",
    "classifications": [
      {
        "code": "variant-code",
        "features": [
          {
            "code": "classification-feature-code",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "value",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "scoringWeightAttributes",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/scoringWeightAttributes.scoringweight",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "1.0",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "appearanceAttributes",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.colourfamily",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "red",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.texturefamily",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "glossy",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "generalInformation",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/generalInformation.materials",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "concrete",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "measurements",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/measurements.length",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "10",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.width",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "20",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.height",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "30",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.thickness",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "40",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "goodBetterBest": undefined,
    "images": [
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "name",
    "path": "/p/name-glossy-concrete-3464354221",
    "productBenefits": [
      "product-benefits",
    ],
    "productReferences": undefined,
    "productScoringWeightInt": 1,
    "shortDescription": "Short description",
    "subTitle": "glossy",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
    "visualiserAssets": undefined,
  },
]
`;

exports[`transformProduct original transform tests approval status scenarios should handle appearanceAttributes classifications with no features 1`] = `
[
  {
    "BMI_BRANDS": [
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": [
      {
        "code": "parent-category-code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "PARENT-CATEGORY-CODE": [
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "allCategories": [
      {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": {
      "code": "base-code",
      "name": "name",
    },
    "battenSpacings": undefined,
    "brandCode": "BMI",
    "classifications": [
      {
        "code": "appearanceAttributes",
        "features": [],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "goodBetterBest": undefined,
    "images": [
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "name",
    "path": "/p/name-3464354221",
    "productBenefits": [
      "product-benefits",
    ],
    "productReferences": undefined,
    "productScoringWeightInt": 0,
    "shortDescription": "Short description",
    "subTitle": "",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
    "visualiserAssets": undefined,
  },
]
`;

exports[`transformProduct original transform tests approval status scenarios should handle generalInformation classifications with no features 1`] = `
[
  {
    "BMI_BRANDS": [
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": [
      {
        "code": "parent-category-code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "PARENT-CATEGORY-CODE": [
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "allCategories": [
      {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": {
      "code": "base-code",
      "name": "name",
    },
    "battenSpacings": undefined,
    "brandCode": "BMI",
    "classifications": [
      {
        "code": "generalInformation",
        "features": [],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "goodBetterBest": undefined,
    "images": [
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "name",
    "path": "/p/name-3464354221",
    "productBenefits": [
      "product-benefits",
    ],
    "productReferences": undefined,
    "productScoringWeightInt": 0,
    "shortDescription": "Short description",
    "subTitle": "",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
    "visualiserAssets": undefined,
  },
]
`;

exports[`transformProduct original transform tests approval status scenarios should handle no categories 1`] = `
[
  {
    "APPEARANCEATTRIBUTES$COLOURFAMILY": [
      {
        "code": "codesymbol",
        "name": "red symbol",
      },
    ],
    "APPEARANCEATTRIBUTES$TEXTUREFAMILY": [
      {
        "code": "codesymbol",
        "name": "glossy symbol",
      },
    ],
    "CLASSIFICATION-FEATURE-CODE": [
      {
        "code": "codesymbol",
        "name": "value symbol",
      },
    ],
    "GENERALINFORMATION$MATERIALS": [
      {
        "code": "codesymbol",
        "name": "concrete symbol",
      },
    ],
    "MEASUREMENTS$HEIGHT": [
      {
        "code": "codemm",
        "name": "30 mm",
      },
    ],
    "MEASUREMENTS$LENGTH": [
      {
        "code": "codemm",
        "name": "10 mm",
        "value": "10",
      },
    ],
    "MEASUREMENTS$THICKNESS": [
      {
        "code": "codemm",
        "name": "40 mm",
      },
    ],
    "MEASUREMENTS$WIDTH": [
      {
        "code": "codemm",
        "name": "20 mm",
        "value": "20",
      },
    ],
    "SCORINGWEIGHTATTRIBUTES$SCORINGWEIGHT": [
      {
        "code": "codesymbol",
        "name": "1.0 symbol",
      },
    ],
    "allCategories": [],
    "approvalStatus": "approved",
    "baseProduct": {
      "code": "base-code",
      "name": "name",
    },
    "battenSpacings": undefined,
    "brandCode": "BMI",
    "classifications": [
      {
        "code": "variant-code",
        "features": [
          {
            "code": "classification-feature-code",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "value",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "scoringWeightAttributes",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/scoringWeightAttributes.scoringweight",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "1.0",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "appearanceAttributes",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.colourfamily",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "red",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.texturefamily",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "glossy",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "generalInformation",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/generalInformation.materials",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "concrete",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "measurements",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/measurements.length",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "10",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.width",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "20",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.height",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "30",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.thickness",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "40",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "goodBetterBest": undefined,
    "images": [
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "name",
    "path": "/p/name-glossy-concrete-3464354221",
    "productBenefits": [
      "product-benefits",
    ],
    "productReferences": undefined,
    "productScoringWeightInt": 1,
    "shortDescription": "Short description",
    "subTitle": "glossy",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
    "visualiserAssets": undefined,
  },
]
`;

exports[`transformProduct original transform tests approval status scenarios should handle no classifications 1`] = `
[
  {
    "BMI_BRANDS": [
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": [
      {
        "code": "parent-category-code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "PARENT-CATEGORY-CODE": [
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "allCategories": [
      {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": {
      "code": "base-code",
      "name": "name",
    },
    "battenSpacings": undefined,
    "brandCode": "BMI",
    "classifications": [],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "goodBetterBest": undefined,
    "images": [
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "name",
    "path": "/p/name-3464354221",
    "productBenefits": [
      "product-benefits",
    ],
    "productReferences": undefined,
    "productScoringWeightInt": 0,
    "shortDescription": "Short description",
    "subTitle": "",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
    "visualiserAssets": undefined,
  },
]
`;

exports[`transformProduct original transform tests approval status scenarios should handle no images 1`] = `
[
  {
    "APPEARANCEATTRIBUTES$COLOURFAMILY": [
      {
        "code": "codesymbol",
        "name": "red symbol",
      },
    ],
    "APPEARANCEATTRIBUTES$TEXTUREFAMILY": [
      {
        "code": "codesymbol",
        "name": "glossy symbol",
      },
    ],
    "BMI_BRANDS": [
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": [
      {
        "code": "parent-category-code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CLASSIFICATION-FEATURE-CODE": [
      {
        "code": "codesymbol",
        "name": "value symbol",
      },
    ],
    "GENERALINFORMATION$MATERIALS": [
      {
        "code": "codesymbol",
        "name": "concrete symbol",
      },
    ],
    "MEASUREMENTS$HEIGHT": [
      {
        "code": "codemm",
        "name": "30 mm",
      },
    ],
    "MEASUREMENTS$LENGTH": [
      {
        "code": "codemm",
        "name": "10 mm",
        "value": "10",
      },
    ],
    "MEASUREMENTS$THICKNESS": [
      {
        "code": "codemm",
        "name": "40 mm",
      },
    ],
    "MEASUREMENTS$WIDTH": [
      {
        "code": "codemm",
        "name": "20 mm",
        "value": "20",
      },
    ],
    "PARENT-CATEGORY-CODE": [
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "SCORINGWEIGHTATTRIBUTES$SCORINGWEIGHT": [
      {
        "code": "codesymbol",
        "name": "1.0 symbol",
      },
    ],
    "allCategories": [
      {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": {
      "code": "base-code",
      "name": "name",
    },
    "battenSpacings": undefined,
    "brandCode": "BMI",
    "classifications": [
      {
        "code": "variant-code",
        "features": [
          {
            "code": "classification-feature-code",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "value",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "scoringWeightAttributes",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/scoringWeightAttributes.scoringweight",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "1.0",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "appearanceAttributes",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.colourfamily",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "red",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.texturefamily",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "glossy",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "generalInformation",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/generalInformation.materials",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "concrete",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "measurements",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/measurements.length",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "10",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.width",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "20",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.height",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "30",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.thickness",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "40",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "goodBetterBest": undefined,
    "images": [],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": undefined,
    "measurementValue": "",
    "name": "name",
    "path": "/p/name-glossy-concrete-3464354221",
    "productBenefits": [
      "product-benefits",
    ],
    "productReferences": undefined,
    "productScoringWeightInt": 1,
    "shortDescription": "Short description",
    "subTitle": "glossy",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
    "visualiserAssets": undefined,
  },
]
`;

exports[`transformProduct original transform tests approval status scenarios should not transform full product without Variant products 1`] = `[]`;

exports[`transformProduct original transform tests approval status scenarios should transform full product with single variant to a single ES product 1`] = `
[
  {
    "APPEARANCEATTRIBUTES$COLOURFAMILY": [
      {
        "code": "codesymbol",
        "name": "red symbol",
      },
    ],
    "APPEARANCEATTRIBUTES$TEXTUREFAMILY": [
      {
        "code": "codesymbol",
        "name": "glossy symbol",
      },
    ],
    "BMI_BRANDS": [
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": [
      {
        "code": "parent-category-code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CLASSIFICATION-FEATURE-CODE": [
      {
        "code": "codesymbol",
        "name": "value symbol",
      },
    ],
    "GENERALINFORMATION$MATERIALS": [
      {
        "code": "codesymbol",
        "name": "concrete symbol",
      },
    ],
    "MEASUREMENTS$HEIGHT": [
      {
        "code": "codemm",
        "name": "30 mm",
      },
    ],
    "MEASUREMENTS$LENGTH": [
      {
        "code": "codemm",
        "name": "10 mm",
        "value": "10",
      },
    ],
    "MEASUREMENTS$THICKNESS": [
      {
        "code": "codemm",
        "name": "40 mm",
      },
    ],
    "MEASUREMENTS$WIDTH": [
      {
        "code": "codemm",
        "name": "20 mm",
        "value": "20",
      },
    ],
    "PARENT-CATEGORY-CODE": [
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": [
      {
        "code": "code",
        "name": "name",
      },
    ],
    "SCORINGWEIGHTATTRIBUTES$SCORINGWEIGHT": [
      {
        "code": "codesymbol",
        "name": "1.0 symbol",
      },
    ],
    "allCategories": [
      {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": {
      "code": "base-code",
      "name": "name",
    },
    "battenSpacings": undefined,
    "brandCode": "BMI",
    "classifications": [
      {
        "code": "variant-code",
        "features": [
          {
            "code": "classification-feature-code",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "value",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "scoringWeightAttributes",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/scoringWeightAttributes.scoringweight",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "1.0",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "appearanceAttributes",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.colourfamily",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "red",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.texturefamily",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "glossy",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "generalInformation",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/generalInformation.materials",
            "featureUnit": {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "concrete",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      {
        "code": "measurements",
        "features": [
          {
            "code": "bmiClassificationCatalog/1.0/measurements.length",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "10",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.width",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "20",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.height",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "30",
              },
            ],
            "name": "name",
          },
          {
            "code": "bmiClassificationCatalog/1.0/measurements.thickness",
            "featureUnit": {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": [
              {
                "code": "code",
                "value": "40",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "goodBetterBest": undefined,
    "images": [
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "name",
    "path": "/p/name-glossy-concrete-3464354221",
    "productBenefits": [
      "product-benefits",
    ],
    "productReferences": undefined,
    "productScoringWeightInt": 1,
    "shortDescription": "Short description",
    "subTitle": "glossy",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
    "visualiserAssets": undefined,
  },
]
`;
